--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack",
     "build:stats": "webpack --mode production --json > stats.json",
-    "build:analyze": "yarn build:stats && yarn webpack-bundle-analyzer stats.json"
+    "build:analyze": "yarn build:stats && yarn webpack-bundle-analyzer stats.json",
+    "serve": "webpack serve"
   },
   "author": "",
   "license": "ISC",
@@ -16,21 +17,29 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.10",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0-beta.4",
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.3.1",
+    "react-reconciler": "^0.26.1",
+    "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.11.1",
+    "webpack": "^5.12.0",
     "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^17.0.1",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
     "react-reduce": "^0.2.0",
     "react-router": "^5.2.0",
     "reduce": "^1.0.2",
