--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
