--- a/package.json
+++ b/package.json
@@ -7,24 +7,30 @@
     "build": "webpack",
     "build:stats": "webpack --mode production --json > stats.json",
     "build:analyze": "yarn build:stats && yarn webpack-bundle-analyzer stats.json",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "image-webpack-loader": "^7.0.1",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.1",
     "react-reconciler": "^0.26.1",
     "react-refresh": "^0.9.0",
