--- a/package.json
+++ b/package.json
@@ -6,42 +6,16 @@
   "scripts": {
     "build": "webpack",
     "build:stats": "webpack --mode production --json > stats.json",
-    "build:analyze": "yarn build:stats && yarn webpack-bundle-analyzer stats.json",
+    "build:analyze": "yarn run build:stats && yarn webpack-bundle-analyzer stats.json",
     "serve": "webpack serve",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --colors"
+    "test": "jest --config=config/jest/jest.config.js",
+    "test:watch": "yarn run test --watch",
+    "test:coverage": "yarn run test --coverage --colors"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/register": "^7.12.10",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0-beta.4",
-    "image-webpack-loader": "^7.0.1",
-    "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.1",
-    "react-reconciler": "^0.26.1",
-    "react-refresh": "^0.9.0",
-    "style-loader": "^2.0.0",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.12.0",
-    "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1"
-  },
   "dependencies": {
+    "@babel/runtime": "^7.13.9",
     "@hot-loader/react-dom": "^17.0.1",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
@@ -53,5 +27,38 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.13.9",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@testing-library/react": "^11.2.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0-beta.4",
+    "identity-obj-proxy": "^3.0.0",
+    "image-webpack-loader": "^7.0.1",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.1",
+    "react-reconciler": "^0.26.1",
+    "react-refresh": "^0.9.0",
+    "react-test-renderer": "^17.0.1",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.12.0",
+    "webpack-bundle-analyzer": "^4.3.0",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.1"
   }
 }
